# Viper

./: .gitignore  .gitmodules  CMakeLists.txt  build.bat  build_shaders.bat  clean.bat
sandbox/: main.cpp
src/: main.cpp
src/components/: boxcollision2d.cpp  boxcollision2d.hpp  camera.hpp  component.cpp  component.hpp  entity.cpp  entity.hpp  entitymanager.cpp  entitymanager.hpp  game.hpp  gameobject.cpp  gameobject.hpp  gom.cpp  gom.hpp  input.cpp  input.hpp  spriterenderer.cpp  spriterenderer.hpp  transform.cpp  transform.hpp
src/components/demo/: demo.cpp  demo.hpp  gom.hpp  input.hpp
src/components/spriterenderer/: spriterenderer.hpp
src/core/components/: camera.cpp  camera.hpp  component.cpp  component.hpp  gameobject.cpp  gameobject.hpp  gom.cpp  gom.hpp  input.cpp  input.hpp  scripting.cpp  scripting.hpp  spriterenderer.cpp  spriterenderer.hpp  transform.cpp  transform.hpp
src/core/events/event/: event.hpp
src/core/graphics/renderer/: framebuffer.cpp  framebuffer.hpp  indexbuffer.hpp  renderer.cpp  renderer.hpp  sprite2d.cpp  sprite2d.hpp  vertexarray.hpp
src/core/graphics/renderer/api/: color.hpp
src/core/graphics/renderer/camera/: orthographic_camera.cpp
src/core/graphics/shaders/shader/: shader.cpp
src/core/graphics/window/: application.cpp  window.cpp  window.hpp
src/core/imguieditor/: imguieditor.hpp
src/core/imguieditor/scene/: scene.hpp
src/core/inputlayer/: keyboardinputlayer.hpp  mouseinputlayer.hpp
src/core/layers/layer/: layer.hpp
src/core/layers/layerstack/: layerstack.hpp
src/core/util/globals/: global.hpp
src/core/util/input/mouse/: mouseevents.hpp
src/core/util/physics/: physics2d.hpp
src/core/viper/: base.hpp
src/events/: event.hpp  eventdispatcher.hpp
src/events/basefunctionhandler/: basefunctionhandler.hpp
src/events/event/: event.hpp
src/events/eventhandler/: eventhandler.hpp
src/events/memberfunctionhandler/: memberfunctionhandler.hpp
src/graphics/renderer/: indexbuffer.cpp  renderer.cpp  renderer.hpp  sprite2d.cpp  sprite2d.hpp  vertexarray.cpp  vertexarray.hpp  vertexbuffer.cpp  vertexbuffer.hpp
src/graphics/renderer/api/: vertex.hpp
src/graphics/renderer/camera/: orthographic_camera.cpp  orthographic_camera.hpp
src/graphics/resources/: flat.frag  imgui.ini  quad.frag  test.frag  test.vert  texture.frag  texture.vert
src/graphics/shaders/shader/: shader.cpp  shader.hpp
src/graphics/window/: window.cpp  window.hpp
src/imguieditor/: imguieditor.hpp
src/imguieditor/scene/: scene.hpp
src/inputlayer/: keyboardinputlayer.hpp  mouseinputlayer.hpp
src/layers/layer/: layer.hpp
src/layers/layerstack/: layerstack.cpp  layerstack.hpp
src/resources/: imgui.ini
src/util/components/: component.hpp  light2d.hpp  transform.hpp
src/util/filehandler/: filehandler.cpp
src/util/global/: global.hpp
src/util/globals/: global.cpp  global.hpp
src/util/input/: input.hpp  keycodes.hpp  mousebuttoncodes.hpp
src/util/input/inputhandler/: inputhandler.cpp  inputhandler.hpp
src/util/input/keyboard/: keyboard.cpp  keyboard.hpp
src/util/input/mouse/: mouseevents.cpp  mouseevents.hpp
src/util/ref/: reference.hpp
src/window/: window.cpp  window.hpp
viper-editor/: .gitmodules  CMakeLists.txt  build.bat
viper-editor/sandbox/: main.cpp
viper-editor/src/core/components/: boxcollision2d.cpp  boxcollision2d.hpp  camera.cpp  camera.hpp  component.hpp  gameobject.cpp  gameobject.hpp  gom.cpp  input.cpp  input.hpp  rigidbody2d.cpp  rigidbody2d.hpp  scripting.cpp  scripting.hpp  spriterenderer.cpp  spriterenderer.hpp  transform.cpp  transform.hpp
viper-editor/src/core/events/event/: event.hpp
viper-editor/src/core/graphics/renderer/: framebuffer.cpp  framebuffer.hpp  light2d.cpp  light2d.hpp  linebuffer.cpp  linebuffer.hpp  objloader.hpp  rendercommand.cpp  rendercommand.hpp  renderer.cpp  renderer.hpp  renderer2d.cpp  renderer2d.hpp  renderer3d.cpp  renderer3d.hpp  sprite2d.cpp  sprite2d.hpp  vertexarray.cpp  vertexarray.hpp  vertexbuffer.cpp  vertexbuffer.hpp
viper-editor/src/core/graphics/window/: application.cpp  application.hpp  window.cpp  window.hpp
viper-editor/src/core/imguieditor/: fontawesome5.hpp  imguieditor.cpp  imguieditor.hpp
viper-editor/src/core/imguieditor/scene/: scene.cpp  scene.hpp  scenelayer.cpp  scenelayer.hpp
viper-editor/src/core/layers/layer/: layer.hpp
viper-editor/src/core/layers/layerstack/: layerstack.cpp
viper-editor/src/core/scene/: entitycomponents.hpp  filexplorer.cpp  hierarchy.cpp  hierarchy.hpp  inspector.cpp  scene.cpp  scene.hpp  sceneentity.cpp  sceneentity.hpp  scenelayer.cpp  scenelayer.hpp  viewport.cpp  viewport.hpp
viper-editor/src/core/scene/panels/: filexplorer.cpp  filexplorer.hpp  hierarchy.cpp  inspector.cpp  shadereditor.cpp  shadereditor.hpp  viewport.cpp  viewport.hpp
viper-editor/src/core/util/filehandler/: filehandler.cpp  filehandler.hpp
viper-editor/src/core/util/globals/: global.cpp  global.hpp
viper-editor/src/core/util/input/: input.hpp  mousebuttoncodes.hpp
viper-editor/src/core/util/jsonfilehandler/: jsonfilehandler.cpp  jsonfilehandler.hpp
viper-editor/src/core/util/physics/: physics2d.cpp  physics2d.hpp
viper-editor/src/core/viper/: application.cpp  application.hpp  application_buffer.cpp  application_buffer.hpp  base.hpp  viper.hpp  viperpch.hpp
viper-editor/src/export/: main.cpp  main.hpp
viper-editor/src/resources/: imgui.ini
viper-editor/src/resources/scenes/: 3d_bob  bob.json  bob_z_fight.json  collision.json  imgui.ini
viper-editor/src/resources/shaders/: Renderer2D_Line.frag  Renderer2D_Line.vert  Renderer2D_Quad.vert  Renderer2D_Triangle.vert  Renderer3D_Light.frag  Renderer3D_Light.vert  Renderer3D_Quad.frag  Renderer3D_Quad.vert  flat.frag  flat.vert  line.vert  quad.frag  quad.vert  triangle.frag
viper-engine/: CMakeLists.txt
viper-engine/src/Viper/: editor.cpp  editor.hpp
viper-engine/src/Viper/window/: demo.cpp
viper-sandbox/: CMakeLists.txt
viper-sandbox/src/: sandbox.cpp
viper-vulkan/: CMakeLists.txt
viper-vulkan/src/: instance.cpp  shader.frag  shader.vert
(+30 files in other folders)
